refactored dto and added tests
